$Author$
$Date$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2010-05-03 [A] Added plugin hook to display something after an IP address {GauGau}
2010-05-03 [D] Updated Dutch translation (user contribution) {GauGau}
2010-05-02 [B] Fixed faulty executed database update on stat_details.php {eenemeenemuu}
2010-05-02 [C] Fixed missing header for overall stats (thread ID 64799) {eenemeenemuu}
2010-05-02 [B] Fixed js error for search meta album (thread ID 64312) {eenemeenemuu}
2010-05-02 [B] Fixed 'crop and rotate' issue {eenemeenemuu}
2010-05-01 [B] Fixed issue when performing an OR search (thread ID 64786) {eenemeenemuu}
2010-04-28 [O] Updated language file for Castilian Spanish (user contribution) {GauGau}
2010-04-28 [A] Added partial translation of Mexican Spanish (user contribution) {GauGau}
2010-04-27 [B] Fixed help text issue (thread ID 64743) {eenemeenemuu}
2010-04-27 [A] Added partial Luxembourgish language file (user contribution) {eenemeenemuu}
2010-04-27 [A] Added partial Turkish language file (user contribution) {eenemeenemuu}
2010-04-26 [A] Added user-contributed partially-translated Spanish language file that is more complete than the previous one (but still incomplete) {GauGau}
2010-04-26 [D] Added language details to documentation navigation {GauGau}
2010-04-24 [C] Fixed message box issue (thread ID 64492) {eenemeenemuu}
2010-04-23 [C] Fixed white lines in curve theme (thread ID 64492) {eenemeenemuu}
2010-04-23 [A] Added animation to upload approval button for curve theme (thread ID 64687) {eenemeenemuu}
2010-04-23 [A] Added upload approval message to admin welcome message (thread ID 64687) {eenemeenemuu}